--- a/Resources/appsettings.json
+++ b/Resources/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "WebHookUri": "http://localhost:5000/api/eventsjournal", //Адресс для отправки веб-хука
-  "WebHookLifetime": "5" //Время жизни веб-хука, в минутах
-
+  "WebHookLifetime": "5", //Время жизни веб-хука, в минутах
+  "WebHookSendPeriod": "1000" //периодичность отправки веб-хуков из очереди, в миллисекундах
 }
